--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,8 @@ h3 a {
   padding: 15px;
   margin: 10px auto;
   border-radius: 8px;
+  border: 3px solid black;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
 }
 
 .current-weather-icon {
